src/test/data/tests/pragma/invalid/constant_too_large.c
#pragma data 0x00 "\xFFF"

int main(void) {
    return 0;
}
